--- a/Soo/myPage/Page.scss
+++ b/Soo/myPage/Page.scss
@@ -1,7 +1,16 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+
 body {
   font-family: "montserrat", roboto;
 }
+
+// header {
+//   width: 100%;
+//   height: 100%;
+//   background: #e74c3c;
+//   position: absolute;
+//   overflow: auto;
+// }
 
 .icon-1,
 .icon-2,
@@ -36,20 +45,31 @@ body {
   border-radius: 50%;
   transition: all 0.2s ease-in-out;
   background: rgba(255, 255, 255, 0.2);
-}
-.hamburger-icon:hover {
-  transform: scale(1.2);
-  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+  // background: green;
+  // width: auto;
+  // height: 50px;
+  // overflow: hidden;
+  &:hover {
+    // .icon-1 {
+    //   transform: rotate(40deg);
+    // }
+    // .icon-3 {
+    //   transform: rotate(-40deg);
+    // }
+    // .icon-2 {
+    //   opacity: 0;
+    // }
+    transform: scale(1.2);
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+  }
 }
 
 .icon-1.a {
   transform: rotate(40deg);
 }
-
 .icon-3.b {
   transform: rotate(-40deg);
 }
-
 .icon-2.c {
   opacity: 0;
 }
@@ -61,13 +81,17 @@ body {
 @keyframes slideIn {
   0% {
     width: 0%;
+    // transform: scale(.3);
     opacity: 0;
   }
+
   100% {
     width: 50%;
+    // transform:scale(1);
     opacity: 1;
   }
 }
+
 nav {
   background: #0288d1;
   position: absolute;
@@ -77,25 +101,34 @@ nav {
   width: 0%;
   z-index: 10;
   opacity: 0;
+
   transition: all 600ms cubic-bezier(0.62, 0.04, 0.3, 1.56);
   transition-delay: 100ms;
+  ul {
+    margin: 0;
+    position: absolute;
+    top: 30%;
+    left: 40%;
+    li {
+      list-style: none;
+      font-size: 24px;
+      color: #fff;
+      line-height: 2.2;
+      text-transform: uppercase;
+      letter-spacing: 1.7px;
+
+      &:before {
+      }
+    }
+  }
 }
-nav ul {
-  margin: 0;
-  position: absolute;
-  top: 30%;
-  left: 40%;
-}
-nav ul li {
-  list-style: none;
-  font-size: 24px;
-  color: #fff;
-  line-height: 2.2;
-  text-transform: uppercase;
-  letter-spacing: 1.7px;
-}
+
 nav.show {
+  //  opacity: 0;
+  // animation: slideIn 0.6s cubic-bezier(.62,.04,.3,1.56);
+  // animation-fill-mode: forwards;
   width: 50%;
+  // transform:scale(1);
   opacity: 1;
 }
 
@@ -130,6 +163,7 @@ nav.show {
     opacity: 1;
   }
 }
+
 .content {
   position: absolute;
   top: 50%;
@@ -137,11 +171,9 @@ nav.show {
   width: 100%;
   transform: translate(-50%, -50%);
   text-align: center;
+  h1 {
+    font-size: 70px;
+    animation: shotup 600ms ease-in-out;
+    animation-delay: 300ms;
+  }
 }
-.content h1 {
-  font-size: 70px;
-  animation: shotup 600ms ease-in-out;
-  animation-delay: 300ms;
-}
-
-/*# sourceMappingURL=Page.css.map */
