--- a/Hoon/member.css
+++ b/Hoon/member.css
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Gugi&family=IBM+Plex+Sans+KR&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Gugi&family=IBM+Plex+Sans+KR&display=swap");
 
 /* font-family: 'Gugi', cursive;
 font-family: 'IBM Plex Sans KR', sans-serif; */
-
-
 
 * {
   padding: 0;
@@ -12,7 +10,7 @@ font-family: 'IBM Plex Sans KR', sans-serif; */
 }
 
 body {
-  background-image: url(../1/mypage/img/night-space-sky-stars-nebula-night-sky-71706-wallhere.com.jpg);
+  background-image: url(../1/pg_1/mypage/img/night-space-sky-stars-nebula-night-sky-71706-wallhere.com.jpg);
 }
 
 .wrapper {
@@ -24,7 +22,7 @@ body {
   margin-bottom: 15vw;
   text-align: center;
   color: white;
-  font-family:'Gugi';
+  font-family: "Gugi";
 }
 
 .team {
@@ -53,22 +51,22 @@ h3 {
 /* 승수 코드네임 색깔 */
 #J h3 {
   color: rgb(243, 65, 65);
-  font-family:'Gugi';
+  font-family: "Gugi";
 }
 /* 지훈 코드네임 색깔 */
 #G h3 {
   color: rgb(74, 241, 180);
-  font-family:'Gugi';
+  font-family: "Gugi";
 }
 /* 민정 코드네임 색깔 */
 #E h3 {
   color: rgb(71, 71, 239);
-  font-family:'Gugi';
+  font-family: "Gugi";
 }
 /* 원 코드네임 색깔 */
 #one h3 {
   color: rgb(238, 36, 238);
-  font-family:'Gugi';
+  font-family: "Gugi";
 }
 
 .team .team_member p.role {
@@ -76,7 +74,7 @@ h3 {
   font-size: 2vw;
   text-transform: uppercase;
   margin: 2vw 0;
-  font-family:'Gugi';
+  font-family: "Gugi";
 }
 /* 이미지 크기 조절 */
 .team .team_member .team_img {
@@ -95,5 +93,5 @@ h3 {
 }
 
 .description p {
-  font-family: 'IBM Plex Sans KR';
+  font-family: "IBM Plex Sans KR";
 }
