--- a/COMPLETE/Soo/style.css
+++ b/COMPLETE/Soo/style.css
@@ -1,105 +1,106 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@700&display=swap");
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    scroll-behavior: smooth;
-    overflow: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
-    background-image: url("./img/space.jpg");
-    background-repeat: repeat;
-    width: 100%;
-    height: 300vw;
+  background-image: url("./img/space.jpg");
+  background-repeat: repeat;
+  width: 100%;
+  height: 300vw;
 }
 
 #rainbow {
-    position: relative;
+  position: relative;
 }
 
 .swing {
-    position: absolute;
-    top: 3vw;
-    left: 10vw;
-    animation: swing ease-in-out 2.5s infinite alternate;
-    float: left;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 3vw;
+  left: 10vw;
+  animation: swing ease-in-out 2.5s infinite alternate;
+  float: left;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 @keyframes swing {
-    0% {
-        transform: translate(0, 0);
-    }
-    100% {
-        transform: translate(0, 3vw);
-    }
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(0, 3vw);
+  }
 }
 .swing .album {
-    text-align: center;
-    position: absolute;
-    width: 80vw;
-    height: 40vw;
-    border: 5px solid #f8f8f8;
-    background-color: white;
-    border-radius: 30px;
+  text-align: center;
+  position: absolute;
+  width: 80vw;
+  height: 40vw;
+  border: 5px solid #f8f8f8;
+  background-color: white;
+  border-radius: 30px;
 }
 
 .swing .album .element {
-    font-family: "Lora", serif;
-    font-size: 5vw;
+  font-family: "Lora", serif;
+  font-size: 5vw;
 }
 
 .swing .album .typed-cursor,
 .swing .loading .typed-cursor {
-    font-family: "Lora", serif;
-    font-size: 2vw;
+  font-family: "Lora", serif;
+  font-size: 2vw;
 }
 
 .swing .album .noBox {
-    width: 100%;
-    height: 15vw;
+  width: 100%;
+  height: 15vw;
 }
 
 .swing .loading {
-    position: absolute;
-    width: 80vw;
-    height: 40vw;
-    border: 5px solid white;
-    background-color: white;
-    border-radius: 30px;
+  position: absolute;
+  width: 80vw;
+  height: 40vw;
+  border: 5px solid white;
+  background-color: white;
+  border-radius: 30px;
 }
 
 .swing .loading .noBox {
-    width: 100%;
-    height: 15vw;
+  width: 100%;
+  height: 15vw;
 }
 
 .swing .loading .elementLoading {
-    font-family: "Lora", serif;
-    font-size: 5vw;
-    margin-left: 30vw;
+  font-family: "Lora", serif;
+  font-size: 5vw;
+  margin-left: 30vw;
 }
 
 .swing .album .enterBtn {
-    position: absolute;
-    font-family: "Lora", serif;
-    font-size: 1.6vw;
-    top: 27vw;
-    left: 35vw;
-    padding: 10px;
-    border: 2px solid black;
-    border-radius: 20px;
-    cursor: pointer;
-    opacity: 0;
+  position: absolute;
+  font-family: "Lora", serif;
+  font-size: 1.6vw;
+  top: 27vw;
+  left: 35vw;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 20px;
+  cursor: pointer;
+  opacity: 0;
 }
 
 .swing .album .enterBtn:hover {
-    transform: scale(1.3);
-    transition: 0.5s;
+  transform: scale(1.3);
+  transition: 0.5s;
+  color: white;
+  background-color: rgb(26, 26, 26);
 }
 
 /*# sourceMappingURL=style.css.map */
