--- a/COMPLETE/Soo/style.scss
+++ b/COMPLETE/Soo/style.scss
@@ -106,6 +106,8 @@ body {
 .swing .album .enterBtn:hover {
     transform: scale(1.3);
     transition: 0.5s;
+    color: white;
+    background-color: rgb(26, 26, 26);
 }
 
 //======================================================================================
