--- a/Hoon/jihoon.css
+++ b/Hoon/jihoon.css
@@ -209,13 +209,15 @@ header .sns > a:hover {
   /* display: inline-block; */
   /* border-bottom: 1px solid #000; */
   margin-bottom: 5vw;
+  background-color: #e9dac1;
+  /* border: 1px solid yellow; */
 
   /* margin-bottom: 1px solid black; */
   text-align: center;
   align-items: center;
   font-size: 2vw;
   line-height: 5vw;
-  background-color: #fff;
+  /* background-color: #fff; */
 }
 #jh-second {
   width: 50%;
