--- a/COMPLETE/Soo/main/main.scss
+++ b/COMPLETE/Soo/main/main.scss
@@ -421,7 +421,7 @@ section.innerbox {
             }
         }
         & .red {
-            background-color: #f25c54;
+            background-image: url(./img/ch_red.png);
         }
 
         & .orange {
