--- a/Min/mypage/mypage.css
+++ b/Min/mypage/mypage.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Arvo&family=Cinzel:wght@600&family=Lobster&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap");
 /* font-family: 'Nanum Gothic Coding', monospace; */
 
 /* font-family: 'Arvo', serif;
@@ -19,6 +19,7 @@ body {
 .lee {
   width: 100%;
   height: 100%;
+  /* display: flex; */
 }
 .logo {
   z-index: 100;
@@ -43,6 +44,7 @@ body {
 }
 .navigation.open {
   display: block;
+  /* display: inline-block; */
 }
 
 .navigation ul {
@@ -59,22 +61,34 @@ body {
 .navigation ul li {
   list-style: none;
   position: relative;
+  /* display: flex; */
   width: 100%;
   height: 3vw;
-  margin-left: 4vw;
+  margin-left: 8vw;
+  /* margin-left: 4vw; */
   /* padding: 0 2px; */
   /* border: 1px solid #fff; */
   z-index: 999;
+  /* display: flex; */
+  /* text-align: start; */
 }
 
 .navigation ul li a {
   position: relative;
   display: flex;
+  /* display: inline-block; */
   align-items: center;
   justify-content: flex-start;
   text-align: center;
   text-decoration: none;
+  /* width: 100%; */
 }
+.navigation ul li span {
+  /* border: 1px solid #fff; */
+  /* text-align: start; */
+  /* float: left; */
+}
+
 /* 행성 아이콘 */
 .navigation ul li a img {
   /* position: relative; */
@@ -118,7 +132,7 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: 0.5s;
-  font-family: 'Nanum Gothic Coding';
+  font-family: "Nanum Gothic Coding";
 }
 
 .navigation.open ul li a .text {
