--- a/COMPLETE/Soo/main/main.css
+++ b/COMPLETE/Soo/main/main.css
@@ -26,6 +26,126 @@ body {
   justify-content: center;
   align-content: center;
 }
+/* 정강이 로고 */
+.logo {
+  z-index: 100;
+  /* position: absolute; */
+  position: fixed;
+  top: 0.5vw;
+  width: 10vw;
+  height: 10vw;
+
+  left: 0.5vw;
+  /* border: 1px solid #fff; */
+}
+.logo img {
+  width: 100%;
+  height: 100%;
+}
+.navigation {
+  display: none;
+  position: fixed;
+  z-index: 99;
+  top: 10vw;
+  /* border: 1px solid #fff; */
+  /* width: 100%; */
+}
+.navigation.open {
+  display: block;
+}
+
+.navigation ul {
+  display: flex;
+  flex-direction: column;
+  /* gap: 2vw; */
+  /* width: 100%; */
+  z-index: 999;
+  /* border: 1px solid red; */
+}
+
+.navigation ul li {
+  list-style: none;
+  position: relative;
+  /* width: 100%; */
+  /* height: 3vw; */
+  width: inherit;
+  height: inherit;
+  margin-left: 1.5vw;
+  /* padding: 0 2px; */
+  /* border: 1px solid #fff; */
+  z-index: 999;
+  justify-content: center;
+  /* border: 1px solid #fff; */
+  /* border: 1px solid #fff; */
+  /* margin-top: 3vw; */
+  /* border: 1px solid yellow; */
+  height: 7vw;
+  padding: -5vw;
+  /* margin: 1vw; */
+}
+
+.navigation ul li a {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
+  text-decoration: none;
+  /* border: 1px solid yellow; */
+  /* margin-top: 3vw; */
+  /* top: 0; */
+  /* border: 1px solid red; */
+  /* margin: -2vw; */
+}
+/* 행성 아이콘 */
+.navigation ul li a img {
+  /* position: relative; */
+  display: block;
+  min-width: 3vw;
+  height: 3vw;
+  line-height: 7vw;
+  transition: 0.5s;
+  margin-right: 1vw;
+}
+
+/* .navigation ul li.active {
+    transform: translateX(5vw);
+  }
+  .navigation.open ul li.active {
+    transform: translateX(10vw);
+  } */
+#orange {
+  color: rgb(239, 91, 11);
+}
+
+#purple {
+  color: purple;
+}
+
+#green {
+  color: rgb(142, 231, 142);
+}
+
+#blue {
+  color: rgb(33, 71, 244);
+}
+
+.navigation ul li a .text {
+  position: relative;
+  padding: 0;
+  height: 12vw;
+  display: flex;
+  align-items: center;
+  color: white;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+}
+
+.navigation.open ul li a .text {
+  opacity: 1;
+  visibility: visible;
+}
 .bg__content {
   position: relative;
   align-self: center;
