--- a/COMPLETE/Soo/main/main.css
+++ b/COMPLETE/Soo/main/main.css
@@ -43,7 +43,7 @@ body {
     height: 100%;
 }
 .navigation {
-    display: none;
+    /* display: none; */
     position: fixed;
     z-index: 99;
     top: 10vw;
@@ -60,7 +60,7 @@ body {
     /* gap: 2vw; */
     /* width: 100%; */
     z-index: 999;
-    /* border: 1px solid red; */
+    /* animation: fade0 1s forwards ease; */
 }
 
 .navigation ul li {
@@ -82,8 +82,32 @@ body {
     height: 7vw;
     padding: -5vw;
     /* margin: 1vw; */
+    /* animation: move 1s forwards ease; */
 }
 
+@keyframes move0 {
+    0% {
+        opacity: 0;
+        transform: translate(-10vw, 0);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+}
+
+@keyframes fade {
+    0% {
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translate(-10vw, 0);
+    }
+}
 .navigation ul li a {
     position: relative;
     display: flex;
@@ -134,7 +158,7 @@ body {
 .navigation ul li a .text0 {
     position: relative;
     padding: 0;
-    height: 12vw;
+    height: 3vw;
     display: flex;
     align-items: center;
     color: white;
