--- a/COMPLETE/main.css
+++ b/COMPLETE/main.css
@@ -761,6 +761,42 @@ section::after {
 
 /* 강지훈부분 끝 */
 
+/* 비행기타고 지구 떠나기 */
+
+#exitEarth .background .jojong {
+    width: 100%;
+    height: 58vw;
+    z-index: 3;
+    position: absolute;
+    top: 900vw;
+}
+
+#exitEarth .background video {
+    position: absolute;
+    top: 900vw;
+    left: 0;
+    width: 100%;
+    /* height: 55vw; */
+    z-index: 1;
+}
+
+#exitEarth .bigEarth img {
+    position: absolute;
+    width: 20vw;
+    height: 20vw;
+    z-index: 2;
+    top: 915vw;
+    left: 40vw;
+}
+
+#exitEarth .white {
+    width: 100vw;
+    height: 58vw;
+    background-color: white;
+    z-index: 9;
+}
+
+/* What's your planet */
 .arrows {
     /**/
     position: absolute;
