--- a/COMPLETE/main.css
+++ b/COMPLETE/main.css
@@ -750,8 +750,8 @@ section::after {
     top: 70%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    background-size: cover;
-    /* 요소의 공백을 어떻게 처리할까? */
+    background-size: cover; */
+/* 요소의 공백을 어떻게 처리할까? */
 /* white-space: nowrap;
     background-position: 50% 50%;
     text-align: center;
@@ -847,8 +847,8 @@ section::after {
     position: absolute;
     width: 3.3vw;
     height: 3.3vw;
-    border-left: 3.3vw solid rgba(63, 113, 221, 0.5);
-    border-bottom: 3.3vw solid rgba(63, 113, 221, 0.5);
+    border-left: 3.3vw solid #0e1326;
+    border-bottom: 3.3vw solid #0e1326;
     transform: translate(3.3vw, 13.2vw) rotate(-135deg);
     animation: arrows 2s linear infinite -2s;
     z-index: 999;
@@ -857,26 +857,26 @@ section::after {
 
 @keyframes arrows {
     0% {
-        border-left: 3.3vw solid rgba(63, 113, 221, 0.5);
-        border-bottom: 3.3vw solid rgba(63, 113, 221, 0.5);
+        border-left: 3.3vw solid #0e1326;
+        border-bottom: 3.3vw solid #0e1326;
         transform: translate(-2.6vw, 0) rotate(-135deg);
     }
 
     10%,
     90% {
-        border-left: 3.3vw solid rgba(63, 113, 221, 0.5);
-        border-bottom: 3.3vw solid rgba(63, 113, 221, 0.5);
+        border-left: 3.3vw solid #0e1326;
+        border-bottom: 3.3vw solid #0e1326;
     }
 
     50% {
-        border-left: 3.3vw solid rgba(63, 113, 221, 0.5);
-        border-bottom: 3.3vw solid rgba(63, 113, 221, 0.5);
+        border-left: 3.3vw solid #0e1326;
+        border-bottom: 3.3vw solid #0e1326;
         transform: translate(1.6vw, 0px) rotate(-135deg);
     }
 
     100% {
-        border-left: 3.3vw solid rgba(63, 113, 221, 0.5);
-        border-bottom: 3.3vw solid rgba(63, 113, 221, 0.5);
+        border-left: 3.3vw solid #0e1326;
+        border-bottom: 3.3vw solid #0e1326;
         transform: translate(4.6vw, 0) rotate(-135deg);
     }
 }
